# code-assistant

./: LICENSE  README.md  package.json
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
